remove unneeded benchmark flags